--- a/mytinerary/index.html
+++ b/mytinerary/index.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"
       rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MyTinerary</title>
   </head>
   <body>
     <div id="root"></div>
